examples/test/testpolicy14466.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14466
  namespace: namespace372
spec:
  podSelector:
    matchLabels:
      key8: value25
      key36: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value31
          key9: value11
          key25: value0
      podSelector:
        matchLabels:
          key48: value28
          key36: value25
          key3: value4
